# transvarpy

./: LICENSE.TXT  Pointers.py  README.md  SETUP  code.py  ex.py  pyproject.toml  setup.py  test.py  test1.py
Tra/: TransDict.py  TransFile.py
src/transvar/: __init__.py
transvar/: TransDict.py  TransFile.py  TransIndv.py  __init__.py
transvarpy/: __init__.py
transvarpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tranvar/: TransFile.py  TransIndv.py
