[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name='transvarpy'
version='0.1.0'
authors = [
  { name="teddyoweh", email="teddy@teddyoweh.net" }
]
  description='A new method of declaring and editing variable names'
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/teddyoweh/transvarpy"
"Bug Tracker" = "https://github.com/teddyoweh/transvarpy/issues"